--- a/view/style.css
+++ b/view/style.css
@@ -13,6 +13,13 @@ table, th , td {
   
 }
 
+img.imagen{
+ height: 200px !important;
+ width: 200px !important;
+ 
+}
+
+
 tr:hover {background-color: #f5f5f5}
 /*
 tr:nth-child(even) {background-color: #f2f2f2}
